2006-01-22  Chris Toshok  <toshok@ximian.com>

	* HttpRequest.cs (ReadBoundary): remove two unused variables to
	quiet mcs.
	(IsBoundary): remove unused method.

	* MimeTypes.cs (.cctor): use a 2.0 friendly form of the Hashtable
	ctor to silence a warning.

	* HttpCacheVaryByHeaders.cs (.ctor): same.

	* HttpCacheVaryByParams.cs (.ctor): same.

	* StaticSiteMapProvider.cs (UrlToNode): same.

2006-01-22  Konstantin Triger <kostat@mainsoft.com>

	* HttpWorkerRequest.cs: ensure case insensitivity in header search.

2006-01-19  Konstantin Triger <kostat@mainsoft.com>

	* HttpApplication.jvm.cs: merge HttpApplication.cs changes.

2006-01-17  Chris Toshok  <toshok@ximian.com>

	* CapabilitiesLoader.cs (Init): use WebConfigurationManager in the
	CONFIGURATION_2_0 case.

	* HttpRuntime.cs (MachineConfigurationDirectory): same.

2006-01-16  Chris Toshok  <toshok@ximian.com>

	* HttpApplicationFactory.cs: call WebConfigurationManager.Init in
	the CONFIGURATION_2_0 case.

2006-01-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWriter.cs: made Write (char) less memory hungry. Thanks to Mike
	Glenn for pointing this out.

2006-01-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: fix condition for ContextAvailable.

2006-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpResponse.cs: removed TARGET_JVM block from End
	* GetJavaTextReader: Merged TARGET_JVM block from LoadFile
	to GetJavaTextReader

2006-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: removed TARGET_JVM block from MapPath

2006-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: little fix in MapPath(), virtualPath.Replace
	return value wasnt stored.

2006-01-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponse.cs: typo in comment.

	* HttpApplicationFactory.cs:
	* HttpApplication.cs: don't discard the application used for running the
	Application_Start event to allow for Redirect/Transfer to be used. Fail